<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:padding="16dp"
    android:orientation="vertical">
<!--    Header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_a_fan"
        android:textSize="26sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>
<!--    Start /Reset Button-->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart"
            android:layout_weight="1"
            android:text="@string/start" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnReset"
            android:layout_marginStart="12dp"
            android:text="@string/reset"/>

    </LinearLayout>
<!--    Lyric box section -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLyricsTitle"
        android:text="@string/lyrics"
        android:textStyle="bold"
        android:paddingTop="12dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#EEEEEE"
        android:padding="12dp"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvResult"
            android:text="@string/tap_start_to_load_lyrics"
            android:paddingTop="16sp"/>

    </ScrollView>
<!--    Result / reveal-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:paddingTop="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Reveal"
        android:textStyle=""
        android:paddingBottom="12dp"/>
    <!--        Answer button-->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/btn1"
            android:text="1"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/btn2"
            android:text="2"
            android:layout_marginStart="12dp"
            android:layout_weight="1"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:text="3"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/btn4"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:text="4"/>

    </LinearLayout>

</LinearLayout>